# clipmind

./: .gitignore  README.md  pyproject.toml  requirements.txt
clipmind/: __init__.py
clipmind/src/: __init__.py
clipmind/src/cli/: interface.py
clipmind/src/core/: __init__.py  audio_extractor.py
clipmind/src/core/validation/: __init__.py  video_validators.py
clipmind/src/utils/: __init__.py  ai_utils.py  decorators.py  language.py  redis.py  validation.py
clippy/: __init__.py
clippy/src/cli/: interface.py
clippy/src/core/: __init__.py  video_tools.py
clippy/src/utils/: resolution.py
