[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clippy"
version = "1.0.0"
description = "A simple and efficient Python tool to extract audio from video files using FFmpeg"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Mudasir", email = "your_email@example.com" }
]
dependencies = [
    "ffmpeg-python",
    "pymongo"
]

keywords = ["video", "audio", "ffmpeg", "converter", "media"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
clippy = "clippy.src.cli.interface:main"
