[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clipmind"
version = "1.0.0"
description = "A simple and efficient Python tool to extract audio from video files using FFmpeg"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }

authors = [
    { name = "Mudasir", email = "your_email@example.com" }
]

keywords = ["video", "audio", "ffmpeg", "converter", "media"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
clipmind = "clipmind.cli.interface:main"